--- a/.env
+++ b/.env
@@ -1,12 +1,15 @@
 PORT = "8080"
 
 TOKEN_TIME_OUT = "24"
+TOKEN_EXPIRE_HOUR = "30"
 
-DB_HOST = ""
-DB_PORT = ""
-DB_NAME = ""
-DB_USERNAME = ""
-DB_PASSWORD = ""
+JWT_SECRET = "HNJ6fTNhhU6p37qGgXxMkDC2QIYnyLq94D09"
+
+DB_HOST = "http://54.169.41.203"
+DB_PORT = "1150"
+DB_NAME = "database_camp"
+DB_USERNAME = "root"
+DB_PASSWORD = "1@Wwwwww"
 
 ALLOW_ORIGINS = ""
 STORAGE_BACKET = ""
