--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ TOKEN_EXPIRE_HOUR = "30"
 
 JWT_SECRET = "HNJ6fTNhhU6p37qGgXxMkDC2QIYnyLq94D09"
 
-DB_HOST = "http://54.169.41.203"
-DB_PORT = "1150"
+DB_HOST = "54.169.41.203"
+DB_PORT = "3306"
 DB_NAME = "database_camp"
 DB_USERNAME = "root"
 DB_PASSWORD = "1@Wwwwww"
