--- a/.env
+++ b/.env
@@ -11,11 +11,10 @@ DB_NAME = "database_camp"
 DB_USERNAME = "root"
 DB_PASSWORD = "1@Wwwwww"
 
-ALLOW_ORIGINS = ""
-STORAGE_BACKET = ""
-PUBLIC_STORAGE_BACKET = ""
-GOOGLE_CLOUD_PROJECT_ID = ""
-GOOGLE_CLOUD_SERVICE_ACCOUNT = ""
+AWS_REGION=ap-southeast-1
+AWS_ACCESS_KEY_ID = AKIAWDS7ZVCH6K75ZNNZ
+AWS_SECRET_ACCESS_KEY = 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
+AWS_BUCKET_NAME = database-camp
 
 SENTRY_ON = true
 SENTRY_LINK = ""
