fix get video content bug

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_USERNAME = "root"
 DB_PASSWORD = "1@Wwwwww"
 
 AWS_REGION=ap-southeast-1
-AWS_ACCESS_KEY_ID = AKIAWDS7ZVCH6K75ZNNZ
-AWS_SECRET_ACCESS_KEY = 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
+AWS_ACCESS_KEY_ID = AKIAWDS7ZVCH6AALBD65
+AWS_SECRET_ACCESS_KEY = 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
 AWS_BUCKET_NAME = database-camp
 
 SENTRY_ON = true
