fix: google cloud storage signed url

--- a/.env
+++ b/.env
@@ -21,5 +21,4 @@ AWS_BUCKET_NAME=database-camp
 SENTRY_ON=true
 SENTRY_LINK=""
 
-CLOUD_BUCKET_NAME=""
-CLOUD_GOOGLE_ACCESS_ID=""
+CLOUD_BUCKET_NAME="databasecamp-private"
