--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,8 @@
 steps:
+  - name: "gcr.io/cloud-builders/gsutil"
+    args: ["cp", "gs://databasecamp-private/backend-infrastructure/service_account.json", "./.service_account.json"]
+  - name: "gcr.io/cloud-builders/gsutil"
+    args: ["cp", "gs://databasecamp-private/backend-infrastructure/.env.develop", "./.env"]
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/$TRIGGER_NAME', '.']
   - name: 'gcr.io/cloud-builders/docker'
