--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,15 @@ services:
       - ./data/redis:/data
       - ./config/redis.conf:/redis.conf
     command: redis-server /redis.conf
+    networks:
+      - cache-net
+  backend:
+    image: ganinw13120/dbc-backend:1.0.14
+    container_name: backend
+    ports:
+      - 8080:8080
+    networks:
+      - cache-net
+
+networks:
+  cache-net:
